--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             <li>3. Nedupinti.</li>
             <li>4. Kai kuriuos modus arba resource packus galima naudoti atsiklausus ownerio.</li>
 			<li>5. Galima gauti serverio įjungimo teises atsiklausus ownerio.</li>
+		<li>6. Negalima kurtis daugiau negu vieno acc ir negalima jungtis į kitų acc.</li>
+		<li>7. Pažeidus taisykles warning antrą karta ban.</li>
         </ul>
     </div>
 </body>
