--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			<li>5. Galima gauti serverio įjungimo teises atsiklausus ownerio.</li>
 		<li>6. Negalima kurtis daugiau negu vieno acc ir negalima jungtis į kitų acc.</li>
 		<li>7. Pirmą kartą pažeidus taisykles warning, antrą kartą arba daugiau (nusprendus owneriui ir serverio žaidėjams) ban.</li>
+        <li>8. Owneris gali taisykles keisti.</li>
         </ul>
     </div>
 </body>
